--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,12 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml">
+  <head>
+    <title>Kodi Connect</title>
+    <!--
+      Link the favicon
+    -->
+    <link rel="icon" type="image/png" href="favicon.png" />
+  </head>
   <body>
     <!--
       Entry point of the code
